@@ -11,6 +11,9 @@ Format:
 . Any other notes ....                   (internal changes)
 
 
+2014-01-07 (Kenneth Geisshirt)
++ Table::range() added. The method returns a set of rows as a TableView.
+
 2013-12-17 (Kristian Spangsege)
 + Implicit termination of active transaction when SharedGroup is destroyed.
 . Class `File` and related exceptions such as `File::AccessError` moved to namespace `tightdb::util`.
